Se arreglo un error de tipeo y se agrego una sola imagen, mas adelante se agregan mas como para tener de referencia

--- a/tp1/style.css
+++ b/tp1/style.css
@@ -73,8 +73,9 @@ h1{
         align-items: center;
       }  
       
-       .container {
-        flex-direction: column;
-        width: 90%; /* Cambia el ancho a un porcentaje para que se ajuste */
-        margin: 10px auto; /* Centra los contenedores y agrega espacio */
+         .container {
+          flex-direction: column;
+          width: 90%; /* Cambia el ancho a un porcentaje para que se ajuste */
+          margin: 10px auto; /* Centra los contenedores y agrega espacio */
+        }
       }
